--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,6 @@ spring:
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/food_ordering
-  profiles:
-    include:
-      - swagger
+  mvc:
+    path match:
+      matching-strategy: ant_path_matcher
